2019-04-19  Araki Ken  <arakiken@users.sf.net>

	* ui_screen.[ch]:
	  - key_press() hides pointer, while pointer_motion() shows it.
	  - xterm_hide_cursor() is removed.

	* vt_term.h: vt_term_get_hide_pointer_mode() is added.

	* vt_parser.[ch]:
	  - hide_cursor is removed from vt_xterm_event_listener_t.
	  - Ps of "CSI > Ps p" is stored in vt_parser_t::hide_pointer_mode.
	  - vt_parser_get_hide_pointer_mode() is added.

2019-04-16  Araki Ken  <arakiken@users.sf.net>

	* README.mosh, README.console, README.win32: Updated.

	* win32/ui_font.c: ui_font_new() supports UTF8 encoding for 'fontname'
	  argument.

	* ui_main_config.c: "use_anti_alias" option is revived on win32gdi.

	* vt_char_encoding.c: The size of msb_set_cs_table[] is shrinked.

	* ui_font_manager.c: The size of usascii_font_cs_table[] is shrinked.

	* ef_jis_property.c: The size of jisx0213_2000_1_property_table[]
	  is shrinked.

	* baselib/configure.in: bl_dlfcn_dl.c instead of bl_dlfcn_win32.c is
	  used by default on msys2.

	* ui_screen.c:
	  - The returned value of draw_cursor(), flush_scroll_cache(),
	    redraw_screen(), highlight_cursor(), unhighlight_cursor() and
	    set_icon() is changed from int to void.
	  - screen->blink_wait is reset to -1 whenever key_pressed() is called.

2019-04-12  Araki Ken  <arakiken@users.sf.net>

	* vt_pty_mosh.cpp: Memory leaks are fixed.

	* ui_event_source.c:
	  Fix https://sourceforge.net/p/mlterm/mailman/message/36633222/

2019-04-11  Araki Ken  <arakiken@users.sf.net>

	* README.mosh: Updated.

	* vt_pty_mosh.cpp:
	  - convert_utf8_to_ucs() and convert_ucs_to_utf8() are removed.
	    (moved to https://bitbucket.org/arakiken/mosh/src/tip/src/terminal/parser.cc?at=sixel-winsock)
	  - read_pty() uses sixel_get_drcs().

2019-04-03  Araki Ken  <arakiken@users.sf.net>

	* win32/ui_connect_dialog.c: "Mosh" checkbox of connect dialog
	  is disabled if NO_DYNAMIC_LOAD_SSH is defined.

	* baselib/configure.in: Check for $host_os = msys is added.

	* cocoatouch.m: